chore: комплексная очистка проекта и обновление системы мониторинга
- Удалены временные файлы и устаревшие логи (~1.1MB освобождено)
- Очищены coverage отчеты и временные backrest тесты
- Удалены дублирующиеся конфигурации (*.backup файлы)
- Удалены устаревшие документы и env backup файлы
- Добавлена полная система мониторинга с cAdvisor, Prometheus, Grafana
- Обновлены конфигурации мониторинга и health checks
- Добавлены новые скрипты автоматизации и восстановления
- Обновлена документация по архитектуре и администрированию

Категории удаленных файлов:
- Старые логи: logs/rate-limiting-monitor.log.1 (326KB)
- Coverage отчеты: coverage/ (180KB)
- Временные тесты: tmp/backrest/restore-test/ (548KB)
- Backup конфигурации: conf/backrest/config.json.backup
- Устаревшие документы: 14 файлов docs/
- Старые env backup: 3 файла env/*.backup

Все удаленные файлы сохранены в .config-backup/cleanup-20250717-163852/

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ Thumbs.db
 # ===================================================================
 *.log
 logs/
+tmp/
 *.tmp
 *.temp
 *.bak
@@ -147,3 +148,4 @@ site/
 local/
 *.pid
 *.tgz
+conf/backrest/repo-password.txt
