docs: актуализация документации ERNI-KI до версии 6.0
- Обновлена информация о 20+ сервисах в README.md
- Добавлены решения проблем SearXNG RAG и Backrest API
- Синхронизирована немецкая локализация (docs/de/)
- Обновлены версии документов до 5.0-6.0
- Добавлена информация о новых моделях Ollama
- Актуализированы инструкции установки и troubleshooting

--- a/env/searxng.example
+++ b/env/searxng.example
@@ -33,3 +33,8 @@ SEARXNG_DEBUG=false
 
 # Протокол HTTP (1.0 или 1.1)
 SEARXNG_HTTP_PROTOCOL_VERSION=1.1
+
+# === Примечания по поисковым движкам ===
+# ВНИМАНИЕ: DuckDuckGo отключен в conf/searxng/settings.yml из-за CAPTCHA блокировки
+# Активные движки: Startpage, Brave, Bing
+# Производительность: <3 секунды, 60+ результатов
