feat: обновление конфигураций системы ERNI-KI
- Обновлены примеры переменных окружения (db, ollama, openwebui)
- Актуализированы правила алертов мониторинга
- Обновлена конфигурация SearXNG лимитера
- Улучшена конфигурация Fluent Bit для логирования
- Обновлены настройки безопасности (.snyk)
- Актуализирован пример Docker Compose

--- a/conf/searxng/limiter.toml
+++ b/conf/searxng/limiter.toml
@@ -1,8 +1,8 @@
 # SearXNG Rate Limiter Configuration
-# Минимальная конфигурация для интеграции с OpenWebUI
+# Оптимизированная конфигурация для интеграции с OpenWebUI
 
 [botdetection.ip_limit]
-# Отключить все ограничения для внутренних запросов
+# Мягкие ограничения для предотвращения блокировок поисковых движков
 filter_link_local = false
 link_token = false
 
