--- a/monitoring/fluent-bit/fluent-bit.conf
+++ b/monitoring/fluent-bit/fluent-bit.conf
@@ -1,6 +1,5 @@
 # Fluent Bit рабочая конфигурация для ERNI-KI
 # Совместимость с Fluent Bit v3.0.7 и Elasticsearch 7.17.15
-# ВАЖНО: Все параметры внутри секций должны иметь отступы (4 пробела)
 
 [SERVICE]
     Flush         5
@@ -9,6 +8,14 @@
     HTTP_Server   On
     HTTP_Listen   0.0.0.0
     HTTP_Port     2020
+
+[INPUT]
+    Name              forward
+    Tag               docker.*
+    Listen            0.0.0.0
+    Port              24224
+    Buffer_Chunk_Size 1M
+    Buffer_Max_Size   6M
 
 [INPUT]
     Name              tail
@@ -23,6 +30,12 @@
     Name              record_modifier
     Match             *
     Record            cluster erni-ki
+    Record            environment production
+
+[FILTER]
+    Name              record_modifier
+    Match             docker.*
+    Record            log_source docker
 
 [OUTPUT]
     Name              es
@@ -38,4 +51,4 @@
 
 [OUTPUT]
     Name              stdout
-    Match             *
+    Match             system.*
