--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,15 @@ secrets/
 *.pem
 *.p12
 *.pfx
+*.crt.new
+*.key.new
+
+# ===================================================================
+# AUGMENT И IDE КОНФИГУРАЦИИ
+# ===================================================================
+.augment/
+.vscode/
+.idea/
 
 # ===================================================================
 # NODE.JS / ЗАВИСИМОСТИ
@@ -134,6 +143,11 @@ __snapshots__/
 docs/build/
 site/
 .mkdocs_cache/
+test-*.pdf
+test-*.md
+playwright-artifacts/
+playwright-report/
+tests/fixtures/
 
 # ===================================================================
 # ПРОЧЕЕ
